--- a/css/parallax.css
+++ b/css/parallax.css
@@ -36,7 +36,6 @@
 	bottom: 0;
 	width: 100%;
 	transform: translateY(-50%);
-	padding: 1em 0;
 	box-shadow: 0px 0px 15px;
 }
 
